--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^5.0.1",
 		"axios": "^1.5.0",
 		"chart.js": "^4.4.0",
 		"dayjs": "^1.11.9",
