--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"axios": "^1.5.0",
 		"chart.js": "^4.4.0",
 		"dayjs": "^1.11.9",
+		"dotenv": "^16.4.5",
 		"eventemitter3": "^5.0.1",
 		"html2pdf.js": "^0.10.1",
 		"html5-qrcode": "^2.3.8",
